tests/ui/invalid_transition.stderr
error[E0277]: the trait bound `String: StateMarker` is not satisfied
  --> tests/ui/invalid_transition.rs:27:22
   |
27 |     apply_transition(Transition::<String, Released, String>::new(kind, "bad".into()));
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `StateMarker` is not implemented for `String`
   |
   = help: the following other types implement trait `StateMarker`:
             Acquired
             Released
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P> {
   |                             ^^^^^^^^^^^ required by this bound in `Transition`

error[E0599]: the function or associated item `new` exists for struct `Transition<String, Released, String>`, but its trait bounds were not satisfied
  --> tests/ui/invalid_transition.rs:27:62
   |
27 |     apply_transition(Transition::<String, Released, String>::new(kind, "bad".into()));
   |                                                              ^^^ function or associated item cannot be called on `Transition<String, Released, String>` due to unsatisfied trait bounds
   |
  ::: $RUST/alloc/src/string.rs
   |
   | pub struct String {
   | ----------------- doesn't satisfy `String: StateMarker`
   |
   = note: the following trait bounds were not satisfied:
           `String: StateMarker`
